--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="hello_world">helloworld</string>
     <string name="start">hi start</string>
     <string name="end">hi end</string>
+    <string name="text2">the text2</string>
 </resources>
