买火车票功能

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="start">hi start</string>
     <string name="end">hi end</string>
     <string name="text2">the text2</string>
+    <string name="ticket">ticket broadcast</string>
 </resources>
