--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,9 @@
     <string name="end">hi end</string>
     <string name="text2">the text2</string>
     <string name="ticket">ticket broadcast</string>
+    <string name="insert">插入</string>
+    <string name="query">查询</string>
+    <string name="querys">查询所有数据</string>
+    <string name="update">修改</string>
+    <string name="delete">删除</string>
 </resources>
